// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > should not show label 1`] = `
<div
  class="flex flex-row"
>
  <select
    aria-label="Label"
    class="min-w-[120px] justify-self-end rounded-lg border border-jod-dark bg-jod-white p-2 hover:bg-purple-100 focus:outline-none focus:ring focus:ring-purple-500 disabled:border-gray-500 disabled:bg-gray-200 disabled:text-gray-500 disabled:hover:bg-gray-200"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;

exports[`Snapshot testing > should render as disabled 1`] = `
<div
  class="flex flex-row"
>
  <label
    class="mr-2 self-center font-bold text-jod-black"
    for=":r2:"
  >
    Label
  </label>
  <select
    class="min-w-[120px] justify-self-end rounded-lg border border-jod-dark bg-jod-white p-2 hover:bg-purple-100 focus:outline-none focus:ring focus:ring-purple-500 disabled:border-gray-500 disabled:bg-gray-200 disabled:text-gray-500 disabled:hover:bg-gray-200"
    disabled=""
    id=":r2:"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;

exports[`Snapshot testing > should render with defaults 1`] = `
<div
  class="flex flex-row"
>
  <label
    class="mr-2 self-center font-bold text-jod-black"
    for=":r0:"
  >
    Label
  </label>
  <select
    class="min-w-[120px] justify-self-end rounded-lg border border-jod-dark bg-jod-white p-2 hover:bg-purple-100 focus:outline-none focus:ring focus:ring-purple-500 disabled:border-gray-500 disabled:bg-gray-200 disabled:text-gray-500 disabled:hover:bg-gray-200"
    id=":r0:"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;
